# --e-commerce

./: README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_base_product_py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_lawnGrass_py.html  z_145eef247bfb46b6_log_mixin_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_product_py.html  z_145eef247bfb46b6_smartphone_py.html
src/: base_product.py  category.py  lawnGrass.py  log_mixin.py  main.py  product.py  smartphone.py
tests/: conftest.py  test_category.py  test_lawnGrass.py  test_log_mixin.py  test_product.py  test_smatphone.py
